# Beryllium

./: .gitignore  .gitmodules  Beryllium.sln  BerylliumConfig.lua  CMakeLists.txt  Cleaner.bat  LICENSE  Premake.bat  README.md  Regen.bat  premake5.lua
App/: CMakeLists.txt
App/src/: Main.cpp
Beryllium/: Beryllium.vcxproj  Beryllium.vcxproj.filters  CMakeLists.txt  ClassDiagram.cd  premake5.lua
Beryllium/App/: CMakeLists.txt
Beryllium/App/include/Beryllium/: Main.hpp
Beryllium/Core/: CMakeLists.txt
Beryllium/Core/include/Beryllium/: CoreApi.hpp  Types.hpp
Beryllium/Core/src/: Application.cpp  CoreApi.cpp  Types.cpp
Beryllium/Core/src/Contracts/: Window.cpp
Beryllium/Unix/: CMakeLists.txt
Beryllium/Unix/include/Beryllium/: PlatformApi.hpp  Window.hpp
Beryllium/Unix/src/: Window.cpp
Beryllium/Windows/: CMakeLists.txt
Beryllium/Windows/include/Beryllium/: Window.hpp
Beryllium/Windows/src/: Window.cpp
Beryllium/include/: Beryllium.hpp
Beryllium/include/Beryllium/: API.hpp  Entry.hpp  LayerStack.hpp  Logger.hpp  Window.hpp
Beryllium/include/Beryllium/Common/: Api.hpp  Application.hpp  Main.hpp  Meta.hpp  Types.hpp
Beryllium/include/Beryllium/Contracts/: Window.hpp
Beryllium/include/Beryllium/Events/: Event.hpp  Event.inl
Beryllium/include/Beryllium/Events/CommonEvents/: KeyPressed.hpp  KeyReleased.hpp  MouseButtonReleased.hpp  MouseMoved.hpp  WindowClosed.hpp  WindowMoved.hpp
Beryllium/include/Beryllium/Linux/: Window.hpp
Beryllium/include/Beryllium/Platform/: Window.hpp
Beryllium/include/Beryllium/Windows/: Window.hpp
Beryllium/src/: Application.cpp  LayerStack.cpp
Beryllium/src/Beryllium/Common/: Api.cpp  Application.cpp  Main.cpp  Meta.cpp  Types.cpp
Beryllium/src/Beryllium/Linux/: Window.cpp
Beryllium/src/Beryllium/Platform/: Window.cpp
Beryllium/src/Beryllium/Windows/: Window.cpp
Beryllium/src/Events/: Event.cpp  EventListener.cpp
Beryllium/src/Events/CommonEvents/: KeyPressed.cpp  MouseButtonPressed.cpp  MouseMoved.cpp  WindowMoved.cpp
Core/: CMakeLists.txt
Core/include/Beryllium/: Application.hpp  Types.hpp
Core/include/Beryllium/Contracts/: Window.hpp
Sangenpai/: Sangenpai.vcxproj  Sangenpai.vcxproj.filters
Sangenpai/src/: Application.cpp  Source.cpp
Tests/: CMakeLists.txt
Tests/src/Test/: Main.cpp
Unix/: CMakeLists.txt
Unix/include/Beryllium/: Window.hpp
Unix/src/: PlatformApi.cpp
VisualParadigm/: Beryllium.vpp  Beryllium.vpp.bak_000f  Beryllium.vpp.bak_001d  Beryllium.vpp.bak_002d  Beryllium.vpp.bak_003d  Beryllium.vpp.bak_004d  Beryllium.vpp.bak_005d  Beryllium.vpp.bak_006d  Beryllium.vpp.bak_007d  Beryllium.vpp.bak_008d  Beryllium.vpp.bak_009d  Beryllium.vpp.bak_010d  Beryllium.vpp.bak_011d  Beryllium.vpp.bak_012d  Beryllium.vpp.bak_013d  Beryllium.vpp.bak_014d  Beryllium.vpp.bak_015d  Beryllium.vpp.bak_016d  Beryllium.vpp.bak_017d  Beryllium.vpp.bak_018d
Windows/: CMakeLists.txt
core/: premake5.lua
core/include/: Beryllium.hpp
core/include/Beryllium/: API.hpp  Application.hpp  Keyboard.hpp  Layer.hpp  LayerStack.hpp  Logger.hpp  Logger.inl  Mouse.hpp  Time.hpp  Window.hpp
core/include/Beryllium/Events/CommonEvents/: WindowFocusChanged.hpp
core/include/Beryllium/Layers/: ImGuiLayer.hpp
core/include/Beryllium/Renderer/: BufferElement.hpp  BufferLayout.hpp  GraphicsContext.hpp  IndexBuffer.hpp  OrthographicCamera.hpp  RenderCommand.hpp  Renderable.hpp  Renderer.hpp  Shader.hpp  ShaderDataType.hpp  Sprite.hpp  VertexArray.hpp  VertexBuffer.hpp
core/include/GL/: wglext.h
core/src/: Application.cpp  ImGuiBuild.cpp  Keyboard.cpp  Layer.cpp  LayerStack.cpp  Logger.cpp  Mouse.cpp  Time.cpp  Window.cpp
core/src/Events/: EventDispatcher.cpp
core/src/Events/CommonEvents/: KeyReleased.cpp  MouseButtonReleased.cpp  MouseScrolled.cpp  WindowClosed.cpp  WindowFocusChanged.cpp  WindowResized.cpp
core/src/Layers/: ImGuiLayer.cpp
core/src/Renderer/: BufferElement.cpp  BufferLayout.cpp  GraphicsContext.cpp  IndexBuffer.cpp  OrthographicCamera.cpp  RenderCommand.cpp  Renderable.cpp  Renderer.cpp  Shader.cpp  ShaderDataType.cpp  Sprite.cpp  VertexArray.cpp  VertexBuffer.cpp
include/Beryllium/: Application.hpp  Entry.hpp  Layer.hpp  LayerStack.hpp  Logger.inl  Mouse.hpp
include/Beryllium/Events/: CommonEvents.hpp  EventDispatcher.hpp  EventListener.hpp
include/Beryllium/Events/CommonEvents/: MouseButtonPressed.hpp  MouseScrolled.hpp  WindowResized.hpp
src/: LayerStack.cpp  Window.cpp
